--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,41 @@
 html {
   color: #413C3C;
 }
+.slide-left-enter-active, .slide-left-leave-active {
+	transition: transform 0.3s;
+}
+
+.slide-left-enter-from, .slide-left-leave-to {
+	transform: translateX(-100vh);
+}
+
+.slide-right-enter-active, .slide-right-leave-active {
+	transition: transform 0.3s;
+}
+
+.slide-right-enter-from, .slide-right-leave-to {
+	transform: translateX(100vh);
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.3s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.page {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+.page__body {
+	padding: 12px;
+	background-color: #f3f4f6;
+	flex-grow: 1;
+	overflow: auto;
+	flex-basis: 0px;
+}
