feat: Create Partners and Transactions initial module feat: Create Spinner and Tabs component feat: Create dynamic pages for unique Campaigns and Partners module feat: Create PartnersForm component refactor: Add left panel handling for PageHeader refactor: Adjust styling for table.css refactor: Implement Spinner on Container component

--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -6,11 +6,10 @@ thead {
     padding: 1rem;
     border-bottom-width: 1px;
     border-color: #E5E5E5;
-
 }
 
 thead>tr>th {
-    padding: 6px;
+    padding: 6px 12px 6px 12px;
     font-size: 14px;
     font-weight: 700;
     color: rgba(65, 60, 60, 1)
@@ -21,7 +20,16 @@ tbody {
 }
 
 tbody>tr>td {
-    padding: 6px;
+    padding: 6px 12px 6px 12px;
     font-size: 14px;
     color: rgba(65, 60, 60, 1)
+}
+
+.table__data-actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    cursor: pointer;
 }
