feat: policy create, list integration fix: multiselect + tag issue fix: token used for api request header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,3 +46,14 @@ html {
 	flex-basis: 0px;
 }
 
+::-webkit-scrollbar {
+	@apply w-[5px];
+	@apply z-0;
+}
+
+::-webkit-scrollbar-thumb {
+	@apply z-0;
+	@apply rounded-lg;
+	background-color: gainsboro;
+}
+
