--- a/assets/css/select.css
+++ b/assets/css/select.css
@@ -15,3 +15,6 @@
     border-color: red !important;
     /* box-shadow: 0px 0px 8px 0px #d1e3cb; */
 }
+.multiselect__tags{
+    @apply h-auto !important;
+}
