--- a/assets/css/select.css
+++ b/assets/css/select.css
@@ -1,7 +1,6 @@
 .multiselect > .multiselect__tags {
-  @apply border-b-gray-200;
-  min-height: 0px;
-  height: 38px;
+  @apply border-b-gray-200 h-auto;
+  /* min-height: 0px; */
   padding: 6px 40px 0 8px;
 
   border-right: none;
