--- a/assets/css/select.css
+++ b/assets/css/select.css
@@ -15,11 +15,17 @@
   /* box-shadow: 0px 0px 8px 0px #d1e3cb; */
 }
 .multiselect__tags {
-  @apply h-auto !important;
+  @apply h-auto min-h-[34px] !important;
 }
-.multiselect__content-wrapper {
-  z-index: 51 !important;
+/* .multiselect__content-wrapper {
+  z-index:auto !important;
 }
 .multiselect__content {
-  z-index: 51 !important;
+  z-index:auto !important;
+} */
+.multiselect--active {
+  z-index: 40 !important;
+}
+.multiselect__content-wrapper {
+  z-index: 40 !important;
 }
