--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,19 +32,11 @@ html {
 	opacity: 0;
 }
 
-.page {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
+.page-content {
+	/* background-color: #f3f4f6; */
+	@apply pt-[85px] bg-[#f3f4f6];
 }
 
-.page__body {
-	padding: 20px 20px 20px 20px;
-	background-color: #f3f4f6;
-	flex-grow: 1;
-	overflow: auto;
-	flex-basis: 0px;
-}
 
 ::-webkit-scrollbar {
 	@apply w-[5px];
